# rust-programming

./: README.md
adder/src/: lib.rs
aggregator/src/: main.rs
basic/box_smart_pointer/src/: main.rs
basic/flat-map/: Cargo.toml
basic/flat-map/src/: lib.rs
basic/generic_to_trait_object/: Cargo.toml
basic/generic_to_trait_object/src/: main.rs
basic/hashmap/src/: main.rs
basic/lifetime-misconception/: Cargo.toml
basic/lifetime-misconception/src/: main.rs
basic/test_macro/: Cargo.toml
basic/urls/: Cargo.toml
basic/validation/: Cargo.toml
basic/youtube/: Cargo.toml
csv-sql/: Cargo.toml  Tracking_Rule_Package_Default_Export.csv  result.txt
csv-sql/src/: lib.rs  main.rs
csv-sql/src/handler/: mod.rs
csv-sql/src/loader/: mod.rs
csv-sql/src/utils/: mod.rs
custom_smart_pointer/src/: main.rs
error_handling/src/: main.rs
generic/src/: main.rs
generic_trait_lifetime/src/: main.rs
inverted-index/: Cargo.toml
inverted-index/src/: lib.rs
ip_address/src/: main.rs
lifetimes/src/: main.rs
minigrep/src/: lib.rs  main.rs
ownership/src/: main.rs
project/csv-processing/: Cargo.toml
project/file-system/: Cargo.toml
project/minigrep/: Cargo.toml
project/minigrep/src/: lib.rs  main.rs
project/mongo-crud/: Cargo.toml
project/mongo-crud/src/: aggregation.rs  compound_operation.rs  insert.rs  main.rs  retrieve_data.rs  search_text.rs  specify_query.rs
project/mongo-database/: Cargo.toml
project/text-processing/: Cargo.toml
sort_closure/: Cargo.toml
sort_closure/src/: main.rs
validation/src/: main.rs
vecto/src/: main.rs
(+48 files in other folders)
