[package]
name = "csv-sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
dirs = "5.0.1"
lazy_static = "1.4.0"
regex = "1.10.3"
rusqlite = "0.30.0"
serde = { version = "1.0.195", features = ["derive"] }
