[package]
name = "zinugrep"
version = "0.1.0"
edition = "2021"
description = "A simple command line search tool that reads the file, finds lines in that file that contain the string argument, and prints those lines."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
