[package]
name = "mongo-crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.34", features = ["serde"] }
futures = "0.3.30"
mongodb = { version = "2.8.1", features = ["bson-chrono-0_4"] }
serde = "1.0.196"
tokio = "1.36.0"
